# tgnize

./: README.md  app.py  dev-requirements.txt  install  plot.py  pyproject.toml  requirements.in  requirements.txt  util.py
data/: messages.html  messages10.html  messages100.html  messages101.html  messages102.html  messages103.html  messages104.html  messages105.html  messages106.html  messages107.html  messages108.html  messages109.html  messages11.html  messages110.html  messages111.html  messages112.html  messages113.html  messages114.html  messages115.html  messages116.html  messages117.html  messages118.html  messages119.html  messages12.html  messages120.html  messages121.html  messages122.html  messages123.html  messages124.html  messages125.html  messages126.html  messages127.html  messages128.html  messages129.html  messages13.html  messages130.html  messages131.html  messages132.html  messages133.html  messages134.html  (+298 more)
docs/: minuteBasedAccumulatedTraffic.md  topXActiveChatParticipantOverTime.md
model/: __init__.py  activity.py  chat.py  event.py  message.py  plotDataRange.py  user.py
plotting_scripts/: activeParticipantsOverTime.py  messageCount.py  minuteBasedAccumulatedTraffic.py
tgnize/: __init__.py  app.py  util.py
tgnize/model/: chat.py  event.py  message.py  user.py
tgnize/plotting_scripts/: activeParticipantsOverTime.py  messageCount.py  minuteBasedAccumulatedTraffic.py
